loginsidan klar, förberedelse för att försöka få till mvvm

--- a/TestVerktygProjektOlofBuhlin/TestVerktygProjektOlofBuhlin.csproj
+++ b/TestVerktygProjektOlofBuhlin/TestVerktygProjektOlofBuhlin.csproj
@@ -142,6 +142,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\newton_logo.png" />
     <Content Include="TestVerktygModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>TestVerktygModel.Context.cs</LastGenOutput>
@@ -156,6 +157,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
